--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ethers": "^6.14.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "viem": "^2.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
